Human readable namespaces (#203)
* Dynamic input to enter namespace with suffix

* Add hint in create space

* Proper hint styles

* Fix issue with environment code inputs

* Change space > namespace

* Update explorer to show namespaces id

* Resizable explorer to allow view long namespaces

* Remove unused dependency

* Remove references to name and use id field instead

* Human readable namespaces

--- a/frontend/src/constants.scss
+++ b/frontend/src/constants.scss
@@ -9,4 +9,7 @@ $notification-z-index: 600;
 
 $side-margin: 32px;
 $header-height: 120px;
-$explorer-width: 200px;
+$explorer-width: 220px;
+:export {
+  explorerWidth: $explorer-width;
+}
