--- a/frontend/src/containers/SpaceHeader.scss
+++ b/frontend/src/containers/SpaceHeader.scss
@@ -12,7 +12,7 @@
     margin-right: 12px;
   }
 
-  &Namespace {
+  &Subtitle {
     font-size: 14px;
     margin-top: 6px;
     color: rgba(white, .8);
