--- a/frontend/src/containers/Dialogs/CreateSpace.scss
+++ b/frontend/src/containers/Dialogs/CreateSpace.scss
@@ -6,25 +6,43 @@
     margin-bottom: 12px;
   }
 
-  .NameInput {
-    margin-top: 6px;
-    padding: 8px;
-    border: 1px solid rgba(black, .2);
-    font-size: 18px;
+  &Input {
+    margin-top: 8px;
+  }
 
-    &:focus,
-    &:active {
-      outline: none;
-    }
+  .NameInput input {
+    border: 0;
+    text-align: right;
+    font-size: 20px;
+    padding: 2px 0;
+    margin-right: 4px;
+    border: 0;
+    border-bottom: 1px solid rgba(black, .9);
+    border-radius: 0;
+    min-width: 80px;
+    outline: 0;
 
     &::placeholder {
-      color: rgb(66, 55, 55);
-      opacity: .3;
+      color: black;
+      opacity: .2;
       font-style: italic;
     }
   }
 
-  .Buttons {
+  .NameSuffix {
+    font-size: 20px;
+  }
+
+  .Hints {
     margin-top: 32px;
+    font-size: 16px;
+
+    p {
+      margin-bottom: 8px;
+    }
+  }
+  
+  .Buttons {
+    margin-top: 12px;
   }
 }
